[package]
name = "bitorrentclient"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitorrentclient"
path = "src/lib.rs"

[[bin]]
name = "bitorrentclient"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bendy = "0.3"
clap = { version = "4", features = ["derive"] }
eframe = { version = "0.33", default-features = true }
egui = "0.33"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
rfd = "0.15"
sha1 = "0.10"
